syntax = "proto3";

option csharp_namespace = "ChuckNorris.Service";

package chucknorris;

service ChuckNorris {
	rpc ToJoke(EmptyRequest) returns (JokeResponce);
}

message EmptyRequest { }

message JokeResponce {
	string value = 1;
}